--- a/csharpcore/csharpcore.csproj
+++ b/csharpcore/csharpcore.csproj
@@ -2,13 +2,16 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <StartupObject>csharpcore.Program</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="ApprovalTests" Version="4.2.0" />
+    <PackageReference Include="FluentAssertions" Version="3.3.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.7.0" />
+    <PackageReference Include="NUnit" Version="3.12.0" />
+    <PackageReference Include="NUnit3TestAdapter" Version="4.0.0-alpha.1" />
     <PackageReference Include="xunit" Version="2.3.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
   </ItemGroup>
