--- a/csharpcore/csharpcore.csproj
+++ b/csharpcore/csharpcore.csproj
@@ -15,4 +15,21 @@
     <PackageReference Include="xunit" Version="2.3.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Compile Remove="test\**" />
+    <Compile Remove="test1.cs" />
+    <Compile Remove="test2.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Remove="test\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="test\**" />
+    <None Update=".gitignore">
+      <DependentUpon>README.md</DependentUpon>
+    </None>
+  </ItemGroup>
 </Project>
